k8s/ui/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: ui-svc
  namespace: retail-store-ns
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 8080
    name: http
  selector:
    app: ui
