k8s/ui/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: ui-network-policy
  namespace: retail-store-ns
spec:
  podSelector:
    matchLabels:
      app: ui
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - podSelector:
        matchLabels:
          app.kubernetes.io/name: retail-store-gateway-nginx
    ports:
    - protocol: TCP
      port: 8080
  egress:
  # Allow traffic to Catalog
  - to:
    - podSelector:
        matchLabels:
          app: catalog
    ports:
    - protocol: TCP
      port: 8080
  # Allow traffic to Cart
  - to:
    - podSelector:
        matchLabels:
          app: cart
    ports:
    - protocol: TCP
      port: 8080
  # Allow traffic to Orders
  - to:
    - podSelector:
        matchLabels:
          app: orders
    ports:
    - protocol: TCP
      port: 8080
  # Allow traffic to Checkout
  - to:
    - podSelector:
        matchLabels:
          app: checkout
    ports:
    - protocol: TCP
      port: 8080
  # Allow DNS 
  - to:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: kube-system
      podSelector:
        matchLabels:
          k8s-app: kube-dns
    ports:
    - protocol: UDP
      port: 53
    - protocol: TCP
      port: 53
